--- a/fcc_predict_health_costs_with_regression.ipynb
+++ b/fcc_predict_health_costs_with_regression.ipynb
@@ -13,6 +13,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "import seaborn as sns\n",
         "\n",
         "try:\n",
         "  # %tensorflow_version only exists in Colab.\n",
@@ -26,7 +27,10 @@
         "\n",
         "import tensorflow_docs as tfdocs\n",
         "import tensorflow_docs.plots\n",
-        "import tensorflow_docs.modeling"
+        "import tensorflow_docs.modeling\n",
+        "from keras import layers, Sequential, optimizers\n",
+        "\n",
+        "plt.style.use('ggplot')"
       ]
     },
     {
@@ -45,12 +49,227 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "dataset = pd.read_csv('insurance.csv')\n",
+        "len(dataset)"
+      ],
       "metadata": {
-        "id": "LcopvQh3X-kX"
+        "id": "1gv72dS9kh9i"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset.head()"
+      ],
+      "metadata": {
+        "id": "4LaAJ7x5kiAq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = dataset\n",
+        "df[\"sex\"] = pd.factorize(df[\"sex\"])[0]\n",
+        "df[\"region\"] = pd.factorize(df[\"region\"])[0]\n",
+        "df[\"smoker\"] = pd.factorize(df[\"smoker\"])[0]\n",
+        "dataset = df\n",
+        "dataset.head()"
+      ],
+      "metadata": {
+        "id": "rTVqDQpJkiDq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_dataset = dataset.sample(frac=0.2)\n",
+        "len(test_dataset)"
+      ],
+      "metadata": {
+        "id": "UIcOQ4pBmWpa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset = dataset[~dataset.isin(test_dataset)].dropna()\n",
+        "len(train_dataset)"
+      ],
+      "metadata": {
+        "id": "yQ1KN6-gmWxK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset.head()"
+      ],
+      "metadata": {
+        "id": "NlCtu0UHmW0T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_labels = train_dataset.pop(\"expenses\")\n",
+        "train_labels.head()"
+      ],
+      "metadata": {
+        "id": "kubn6QltmW3K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset.head()"
+      ],
+      "metadata": {
+        "id": "Osx6AMBImW6K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_labels = test_dataset.pop(\"expenses\")\n",
+        "test_labels.head()"
+      ],
+      "metadata": {
+        "id": "_pbptfKKmW86"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_dataset.head()"
+      ],
+      "metadata": {
+        "id": "cwcC34EzmW_y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "normalizer = tf.keras.layers.Normalization(axis=-1)\n",
+        "normalizer.adapt(np.array(train_dataset))\n",
+        "\n",
+        "model = keras.Sequential([\n",
+        "    normalizer,\n",
+        "    layers.Dense(16),\n",
+        "    layers.Dense(4),\n",
+        "    layers.Dropout(.2),\n",
+        "    layers.Dense(1),\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "503EcQDNmXDC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(\n",
+        "    optimizer=tf.optimizers.Adam(learning_rate=0.1),\n",
+        "    loss='mae',\n",
+        "    metrics=['mae', 'mse']\n",
+        ")\n",
+        "model.build()\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "W1wzxB0jkiHD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(\n",
+        "    train_dataset,\n",
+        "    train_labels,\n",
+        "    epochs=100,\n",
+        "    validation_split=0.5,\n",
+        "    verbose=0, # disable logging\n",
+        ")\n",
+        "\n",
+        "print(history)"
+      ],
+      "metadata": {
+        "id": "iBG8AwpJnVAB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss, mae, mse = model.evaluate(test_dataset, test_labels, verbose=2)\n",
+        "\n",
+        "print(\"Testing set Mean Abs Error: {:5.2f} expenses\".format(mae))\n",
+        "\n",
+        "if mae < 3500:\n",
+        "  print(\"You passed the challenge. Great job!\")\n",
+        "else:\n",
+        "  print(\"The Mean Abs Error must be less than 3500. Keep trying.\")\n",
+        "\n",
+        "# Plot predictions.\n",
+        "test_predictions = model.predict(test_dataset).flatten()\n",
+        "\n",
+        "a = plt.axes(aspect='equal')\n",
+        "plt.scatter(test_labels, test_predictions)\n",
+        "plt.xlabel('True values (expenses)')\n",
+        "plt.ylabel('Predictions (expenses)')\n",
+        "lims = [0, 50000]\n",
+        "plt.xlim(lims)\n",
+        "plt.ylim(lims)\n",
+        "_ = plt.plot(lims,lims)"
+      ],
+      "metadata": {
+        "id": "oDu-CC-KnVKi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nW69NY1znVOS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YaYk1j0knVSB"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
